fix(header): fixing scroll effect on small screen (due to hidden megamenu)

--- a/css/nexo.css
+++ b/css/nexo.css
@@ -332,7 +332,7 @@ header ul li:hover .menu {
 }
 
 @media (max-width: 767px) {
-  header ul li:hover .menu {
+  header ul li .menu {
     display: block;
     padding: 5px;
   }
